linked style.css

--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,14 @@
 <html>
-<head>
-  <script src="/bundle.js" ></script> 
-</head>
-<body>
-  <div id="mount"></div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name = "viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel Budget Calculator</title>
+    <link rel="stylesheet"
+      type="text/css"
+      href="/style.css" />
+    <script src="/bundle.js" ></script>
+  </head>
+  <body>
+    <div id="mount"></div>
+  </body>
 </html>
